--- a/app/desktop/styles/component/news/_index.scss
+++ b/app/desktop/styles/component/news/_index.scss
@@ -1,11 +1,16 @@
-.balltoro-breadcrumb > li + li:before {
-    color: #ccc;
-    font-family: FontAwesome;
-    content: "\f178";
-    padding: 0 5px;
-    border-radius: 0;
-}
-
-.balltoro-breadcrumb li a{
-    color: #FA1E64!important;
+.breadcrumb-bar{
+    background: #ECEEEF;
+    &__main{
+        margin: 0;
+        > li + li:before {
+            color: #ccc;
+            font-family: FontAwesome;
+            content: "\f178";
+            padding: 0 5px;
+            border-radius: 0;
+        }
+        > li a{
+            color: #FA1E64;
+        }
+    }
 }
