--- a/app/desktop/styles/component/common/_navbar.scss
+++ b/app/desktop/styles/component/common/_navbar.scss
@@ -1,4 +1,5 @@
-$menu-link-color: #FFFFFF;
+$menu-link-color : #FFFFFF;
+$default-link-color : #FA1E64;
 
 .navbar-menu {
     background: #222222;
@@ -21,7 +22,7 @@ $menu-link-color: #FFFFFF;
                 text-decoration: none;
             }
             &.login-btn {
-                color: #FA1E64 !important;
+                color: $default-link-color;
             }
         }
     }
