--- a/app/desktop/styles/component/news/_featured.scss
+++ b/app/desktop/styles/component/news/_featured.scss
@@ -5,25 +5,25 @@
         }
     }
     &__date {
-        color: rgba(0,0,0,.4);
+        color: rgba(0, 0, 0, .4);
         font-size: 1em;
         font-weight: 400;
         padding-top: 5px;
     }
     &__headline {
-        line-height: 1.2em!important;
+        line-height: 1.2em !important;
         padding-right: 10px;
-        font-size: 2.5em!important;
+        font-size: 2.5em !important;
     }
 }
 
-.indicators-style{
-    bottom: -45px!important;
-    li{
-        border: 1px solid $default-link-color!important;
+.indicators-style {
+    bottom: -45px !important;
+    li {
+        border: 1px solid $default-link-color !important;
     }
 
-    .active{
+    .active {
         background: $default-link-color;
     }
 }
