--- a/app/mobile/styles/component/common/_footer.scss
+++ b/app/mobile/styles/component/common/_footer.scss
@@ -1,6 +1,15 @@
+$footer-bg-color: #333333;
+$footer-base-text-color: #FFFFFF;
+$footer-bottom-separator-color: #444444;
+
+$footer-btn-facebook: #3B5998;
+$footer-btn-twitter: #55acee;
+$footer-btn-pinterest: #DB5442;
+$footer-btn-google-plus: #dd4b39;
+
 .footer {
-    background: #333333;
-    color: #FFFFFF;
+    background: $footer-bg-color;
+    color: $footer-base-text-color;
     margin-top: 30px;
     width: 100%;
     height: 100%;
@@ -8,7 +17,7 @@
         list-style: none;
         padding: 0 !important;
         li {
-            border-bottom: #444444 1px solid;
+            border-bottom: $footer-bottom-separator-color 1px solid;
             a {
                 display: block;
                 padding: 15px;
@@ -22,8 +31,8 @@
 
 .footer-social {
     margin-bottom: 60px;
-    &--icon {
-        color: #FFFFFF;
+    &__icon {
+        color: $footer-base-text-color;
         text-align: center;
         display: inline-block;
         border-radius: 50%;
@@ -31,22 +40,24 @@
         height: 40px;
         line-height: 40px;
         font-size: 1.3em;
-        background-color: #0000AA;
         margin: 5px;
         &:hover, &:focus, &:active {
-            color: #FFFFFF;
+            color: $footer-base-text-color;
         }
-        &__facebook {
-            background: #3B5998;
+        &:active {
+            background: #000000;
         }
-        &__twitter {
-            background: #55acee;
+        &--facebook {
+            background: $footer-btn-facebook;
         }
-        &__pinterest {
-            background: #DB5442;
+        &--twitter {
+            background: $footer-btn-twitter;
         }
-        &__google-plus {
-            background: #dd4b39;
+        &--pinterest {
+            background: $footer-btn-pinterest;
+        }
+        &--google-plus {
+            background: $footer-btn-google-plus;
         }
     }
 }
