--- a/app/mobile/styles/component/news/_latest.scss
+++ b/app/mobile/styles/component/news/_latest.scss
@@ -5,9 +5,17 @@ $latest-details-color: rgba(0, 0, 0, .68);
 
 .latest-news {
     &__header {
-        font-size: 1.3em;
+        display: inline-block;
+        width: 100%;
+        padding: 5px 0;
         margin-bottom: 15px;
         border-bottom: $latest-header-color 8px solid;
+        p, h5 {
+            margin: 0;
+        }
+        a {
+            font-size: 2em;
+        }
     }
     &__content {
         display: table;
