--- a/app/mobile/styles/main.scss
+++ b/app/mobile/styles/main.scss
@@ -1,7 +1,7 @@
 @import "../../bower_components/bootstrap/dist/css/bootstrap.min.css";
 @import "../../bower_components/font-awesome/css/font-awesome.min.css";
+@import "line-icon/style.css";
 
 @import "base";
 @import "component/component";
-
 
